# egov-law-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md
src/egov_law_mcp/: __init__.py  server.py
src/egov_law_mcp/api/: __init__.py  client.py
src/egov_law_mcp/cache/: __init__.py  manager.py
src/egov_law_mcp/models/: __init__.py  schemas.py
src/egov_law_mcp/parser/: __init__.py  xml_to_markdown.py
src/egov_law_mcp/tools/: __init__.py  article.py  fulltext.py  keyword.py  revisions.py  search.py
tests/test_api/: __init__.py  test_client.py
tests/test_e2e/: __init__.py  test_e2e.py
tests/test_parser/: __init__.py  test_xml_to_markdown.py
tests/test_tools/: __init__.py  test_tools.py
