[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egov-law-mcp"
version = "0.1.0"
description = "MCP Server for e-Gov Law API - Japanese law search and retrieval"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takurot" }
]
keywords = ["mcp", "law", "egov", "japan", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "lxml-stubs>=0.5.0",
]

[project.scripts]
egov-law-mcp = "egov_law_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/egov_law_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["no-untyped-call", "untyped-decorator", "call-arg", "import-untyped"]
